serd (0.30.4) stable;

  * Fix EOF handling while reading in bulk or from strings
  * Fix lax handling of string errors
  * Fix reading from a null-delimited socket

 -- David Robillard <d@drobilla.net>  Sun, 26 Apr 2020 16:04:05 +0000

serd (0.30.2) stable;

  * Fix GCC 4 build
  * Fix colliding blank nodes when parsing TriG
  * Fix missing parse error messages
  * Fix parsing "a" abbreviation without padding whitespace
  * Fix parsing TriG graphs with several squashed trailing dots
  * Fix resolving some URIs against base URIs with no trailing slash
  * Improve build system and CI integration
  * Improve documentation

 -- David Robillard <d@drobilla.net>  Sun, 20 Oct 2019 22:28:01 +0000

serd (0.30.0) stable;

  * Add NTriples test suite
  * Add basic error tolerant parsing for line-based formats
  * Add serd_free for freeing memory allocated by serd
  * Add serdi option to write ASCII output
  * Clarify errors returned by serd_env_expand()
  * Clean up testing code
  * Fix building with MSVC
  * Fix length of base64 encoded nodes
  * Fix parsing local names that end with escaped dots
  * Fix reported error when reading statements with only a blank node
  * Improve relative URI serialisation
  * Make serdi guess input syntax from extension if unspecified
  * Make serdi syntax options case-insensitive
  * Report errors for all failing test cases
  * Support strict parsing of prefixed names
  * Upgrade to waf 2.0.9 and autowaf a328983
  * Use more efficient stack allocation and growth policies

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:34:09 +0000

serd (0.28.0) stable;

  * Add serd_node_from_substring()
  * Add support for reading from a user provided callback
  * Fix hangs when reading corrupt UTF-8
  * Fix parsing of hex escapes in file URIs (thanks Johannes Mueller)
  * Fix strict parsing of abolute URI schemes
  * Gracefully handle applications that write corrupt UTF-8

 -- David Robillard <d@drobilla.net>  Fri, 21 Jul 2017 06:28:47 +0000
